tests/spec/emit/snapshots/local_binding_imaginary_not_hijacked.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nfn id(x: int) -> int { x }\n\nfn test() -> int {\n  let imaginary = id\n  imaginary(1)\n}\n"
---
package main

func id(x int) int {
	return x
}

func test() int {
	return id(1)
}
