tests/spec/emit/snapshots/local_binding_new_not_hijacked.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn mk() -> int { 42 }
  
  fn test() -> int {
    let new = mk
    new()
  }
---
package main

func mk() int {
	return 42
}

func test() int {
	new_ := mk
	return new_()
}
