tests/spec/emit/snapshots/local_callable_shadow_does_not_inherit_global_abi.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn apply(x: int) -> Result<int, error> { Ok(x) }
  
  fn main() {
    let apply = |x: int| -> int { x + 1 }
    let value = apply(1)
    let _ = value
  }
---
package main

func apply(x int) (int, error) {
	return x, nil
}

func main() {
	apply_1 := func(x int) int {
		return x + 1
	}
	value := apply_1(1)
	_ = value
}
