tests/spec/emit/snapshots/local_const_shadows_let_binding.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nfn main() {\n  let x = 1\n  fmt.Println(x)\n  const x = 2\n  fmt.Println(x)\n}\n"
---
package main

import "fmt"

func main() {
	x := 1
	fmt.Println(x)
	const x_1 int = 2
	fmt.Println(x_1)
}
