tests/spec/emit/snapshots/local_enum_definition_in_function_body.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  enum Color { Red, Green, Blue }
  
  fn main() {
    let c = Color.Red
    let _ = match c {
      Color.Red => 1,
      Color.Green => 2,
      Color.Blue => 3,
    }
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func main() {
	c := MakeColorRed()
	var tmp int
	switch c.Tag {
	case ColorRed:
		tmp = 1
	case ColorGreen:
		tmp = 2
	default:
		tmp = 3
	}
	_ = tmp
}
