tests/spec/emit/snapshots/local_let_shadows_const_binding.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nfn main() {\n  const x = 1\n  fmt.Println(x)\n  let x = 2\n  fmt.Println(x)\n}\n"
---
package main

import "fmt"

func main() {
	const x int = 1
	fmt.Println(x)
	x_1 := 2
	fmt.Println(x_1)
}
