tests/spec/emit/snapshots/loop_break_unit_call_value.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn noop() {}
  
  fn test() {
    let _ = loop {
      break noop()
    }
  }
---
package main

func noop() {}

func test() {
	var tmp struct{}
	for {
		noop()
		tmp = struct{}{}
		break
	}
	_ = tmp
}
