tests/spec/emit/snapshots/loop_break_value_in_let.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let x = loop {
      if true {
        break 42
      }
    };
    x
  }
---
package main

func test() int {
	var x int
	for {
		if true {
			x = 42
			break
		}
	}
	return x
}
