tests/spec/emit/snapshots/loop_break_value_nested.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test() -> int {\n  let x = loop {\n    let inner = loop {\n      break 10\n    };\n    break inner + 1\n  };\n  x\n}\n"
---
package main

func test() int {
	var x int
	for {
		var inner int
		for {
			inner = 10
			break
		}
		x = inner + 1
		break
	}
	return x
}
