tests/spec/emit/snapshots/loop_break_value_preserves_captured_index_target.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn main() {
    let mut values = [0, 0]
    let mut index = 0
    values[index] = loop {
      index = 1
      match Some(7) {
        Some(value) => break value,
        None => continue,
      }
    }
    if values[0] != 7 || values[1] != 0 { panic("loop result used the changed index") }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	values := []int{0, 0}
	index := 0
	base := values
	idx := index
	var tmp int
	for {
		index = 1
		subject := lisette.MakeOptionSome(7)
		if subject.Tag == lisette.OptionSome {
			tmp = subject.SomeVal
			break
		}
		continue
	}
	base[idx] = tmp
	if values[0] != 7 || values[1] != 0 {
		panic("loop result used the changed index")
	}
}
