tests/spec/emit/snapshots/loop_break_value_stmt_nested_in_expr.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test() -> int {\n  let x = loop {\n    loop { break 42 }\n    break 0\n  };\n  x\n}\n"
---
package main

func test() int {
	var x int
	for {
		for {
			_ = 42
			break
		}
		x = 0
		break
	}
	return x
}
